package org.example.domain;

public interface hasID<ID> {
    ID getID();
    void setID(ID id);
}