@startuml

title __MONITORIZARETEMELABORATORV04's Class Diagram__\n

  namespace  {
    namespace omain {
      class Domain.Nota {
      }
    }
  }
  

  namespace  {
    namespace omain {
      class Domain.Student {
      }
    }
  }
  

  namespace  {
    namespace omain {
      class Domain.Teme {
      }
    }
  }
  

  namespace  {
    namespace omain {
      interface Domain.hasID {
      }
    }
  }
  

  namespace  {
    class Main {
    }
  }
  

  namespace  {
    namespace epository {
      abstract class Repository.AbstractRepo {
      }
    }
  }
  

  namespace  {
    namespace epository {
      interface Repository.CrudRepo {
      }
    }
  }
  

  namespace  {
    namespace epository {
      class Repository.NoteRepo {
      }
    }
  }
  

  namespace  {
    namespace epository {
      class Repository.StudentRepo {
      }
    }
  }
  

  namespace  {
    namespace epository {
      class Repository.TemeRepo {
      }
    }
  }
  

  namespace  {
    namespace ervice {
      class Service.ServiceNote {
      }
    }
  }
  

  namespace  {
    namespace ervice {
      class Service.ServiceStudent {
      }
    }
  }
  

  namespace  {
    namespace ervice {
      class Service.ServiceTeme {
      }
    }
  }
  

  namespace  {
    namespace I {
      class UI.UI {
      }
    }
  }
  

  namespace  {
    namespace alidator {
      class Validator.NotaValidator {
      }
    }
  }
  

  namespace  {
    namespace alidator {
      class Validator.StudentValidator {
      }
    }
  }
  

  namespace  {
    namespace alidator {
      class Validator.TemeValidator {
      }
    }
  }
  

  namespace  {
    namespace alidator {
      class Validator.ValidationException {
      }
    }
  }
  

  namespace  {
    namespace alidator {
      interface Validator.Validator {
      }
    }
  }
  

  Domain.Nota .up.|> Domain.hasID
  Domain.Nota o-- Domain.Student : st
  Domain.Nota o-- Domain.Teme : tm
  Domain.Student .up.|> Domain.hasID
  Domain.Teme .up.|> Domain.hasID
  Repository.AbstractRepo .up.|> Repository.CrudRepo
  Repository.NoteRepo -up-|> Repository.AbstractRepo
  Repository.StudentRepo -up-|> Repository.AbstractRepo
  Repository.TemeRepo -up-|> Repository.AbstractRepo
  Service.ServiceNote o-- Repository.NoteRepo : rep
  Service.ServiceStudent o-- Repository.StudentRepo : rep
  Service.ServiceTeme o-- Repository.TemeRepo : rep
  UI.UI o-- Service.ServiceTeme : serv
  UI.UI o-- Service.ServiceStudent : srv
  UI.UI o-- Service.ServiceNote : sv
  Validator.NotaValidator .up.|> Validator.Validator
  Validator.StudentValidator .up.|> Validator.Validator
  Validator.TemeValidator .up.|> Validator.Validator


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
